bk_ida/gccida/c0/use_crosses_set_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/use_crosses_set_p/src/combine.c:12054:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+28h] [rbp-28h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/use_crosses_set_p/src/combine.c:12109:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/use_crosses_set_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/use_crosses_set_p/src/combine.c:12110:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v15 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/use_crosses_set_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/use_crosses_set_p/src/obj/combine.o] Error 1
